package scheduler;
import "protocols/jobsrv.proto";

enum ProjectState {
  NotStarted = 0;
  InProgress = 1;
  Success = 2;
  Failure = 3;
  Skipped = 4;
}

message Project {
  optional string name = 1;
  optional string ident = 2;
  optional ProjectState state = 3;
  optional uint64 job_id = 4;
}

enum GroupState {
  Pending = 0;
  Dispatching = 1;
  Complete = 2;
  Failed = 3;
}

message GroupCreate {
  optional string origin = 1;
  optional string package = 2;
  optional bool deps_only = 3;
}

message GroupGet {
  optional uint64 group_id = 1;
}

message Group {
  optional uint64 id = 1;
  optional GroupState state = 2;
  repeated Project projects = 3;
  optional string created_at = 4;
}

message Package {
  optional string ident = 1;
  repeated string deps = 2;
}

message PackagePreCreate {
  optional string ident = 1;
  repeated string deps = 2;
}

message PackageCreate {
  optional string ident = 1;
  repeated string deps = 2;
}

message PackageStatsGet {
  optional string origin = 1;
}

message PackageStats {
  optional uint64 plans = 1;
  optional uint64 builds = 2;
}

message JobStatus {
  optional jobsrv.Job job = 1;
}
